Change headings for materials page

--- a/materials.html
+++ b/materials.html
@@ -46,7 +46,7 @@
     <section class="section-half flex flex-center flex-column flex-between background">
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container container-mobile text-white text-shadow">
-            <h1><span>BASICS</span> of 3D Printing</h1>
+            <h1><span>MATERIALS</span> for 3D Printing</h1>
         </div>
         <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
     </section>
@@ -62,11 +62,11 @@
                 <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-printhead.webp" alt="this should be a printhead">
             </picture>
             <article class="margin-top--l margin-bottom--l">
-                <h2 class="margin-bottom--s"><span>WHAT </span>is 3D Printing?</h2>
+                <h2 class="margin-bottom--s"><span>WHAT </span>are 3D printing materials?</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </article>
             <article>
-                <h2 class="margin-bottom--s"><span>WHICH </span>3D Printers are there?</h2>
+                <h2 class="margin-bottom--s"><span>WHICH </span>materials are there?</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </article>
             <picture>
@@ -76,11 +76,11 @@
                 <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-orange-print.webp" alt="this should be a printhead">
             </picture>
             <article class="margin-top--l margin-bottom--l">
-                <h2 class="margin-bottom--s"><span>HOW</span> can I use a 3D Printer?</h2>
+                <h2 class="margin-bottom--s"><span>ARE</span> they safe?</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </article>
             <article>
-                <h2 class="margin-bottom--s"><span>CAN</span> I build my own?</h2>
+                <h2 class="margin-bottom--s"><span>CAN</span> I make my own?</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </article>
         </main>
