Format index.html

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <header class="headerbar flex flex-center">
         <div class="container container--mobile flex flex-center--y">
             <div class="column-2 column-2__open--mobile">
-                <a href="https://rebellionwebdesign.github.io/fab-forever" aria-label="the logo sends you back to the homepage">
-                    <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo">
+                <a href="https://rebellionwebdesign.github.io/fab-forever"
+                    aria-label="the logo sends you back to the homepage">
+                    <img class="headerbar__logo headerbar__logo--mobile" src="assets/img/fab-forever-logo.svg"
+                        alt="the fab forever logo">
                 </a>
                 <img class="mobile--open" src="assets/img/bars-solid.svg" alt="this should be an open icon">
             </div>
@@ -28,14 +30,22 @@
                 <nav>
                     <img class="mobile--close" src="assets/img/xmark-solid.svg" alt="this should be an open icon">
                     <ul>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener" target="_blank"
-                        aria-label="this link sends you to the basics page"><li>BASICS</li></a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener" target="_blank"
-                        aria-label="this link sends you to the materials page"><li>MATERIALS</li></a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener" target="_blank"
-                        aria-label="this link sends you to the models page"><li>MODELS</li></a>
-                        <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener" target="_blank"
-                        aria-label="this link sends you to the help page"><li>HELP</li></a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/basics.html" rel="noopener"
+                            target="_blank" aria-label="this link sends you to the basics page">
+                            <li>BASICS</li>
+                        </a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/materials.html" rel="noopener"
+                            target="_blank" aria-label="this link sends you to the materials page">
+                            <li>MATERIALS</li>
+                        </a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/models.html" rel="noopener"
+                            target="_blank" aria-label="this link sends you to the models page">
+                            <li>MODELS</li>
+                        </a>
+                        <a href="https://rebellionwebdesign.github.io/fab-forever/help.html" rel="noopener"
+                            target="_blank" aria-label="this link sends you to the help page">
+                            <li>HELP</li>
+                        </a>
                     </ul>
                 </nav>
             </div>
@@ -50,7 +60,8 @@
                 <h1><span>NEW</span> to 3D Printing?</h1>
                 <p>Bring your ideas to life with our comprehensive roundup!</p>
                 <div class="button-wrapper">
-                    <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" aria-label="this links to the basics page" rel="noopener" target="_blank">
+                    <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
+                        aria-label="this links to the basics page" rel="noopener" target="_blank">
                         GET STARTED!
                     </a>
                 </div>
@@ -72,10 +83,18 @@
             <div class="column-2 column-2-mobile flex flex-end align-center-mobile">
                 <div class="grid-wrapper">
                     <div class="grid grid-container grid-container-mobile">
-                        <div class="grid-card grid-card__background--basics box-shadow"><h3>BASICS</h3></div>
-                        <div class="grid-card grid-card__background--models box-shadow"><h3>MODELS</h3></div>
-                        <div class="grid-card grid-card__background--materials box-shadow"><h3>MATERIALS</h3></div>
-                        <div class="grid-card grid-card__background--help box-shadow"><h3>HELP</h3></div>
+                        <div class="grid-card grid-card__background--basics box-shadow">
+                            <h3>BASICS</h3>
+                        </div>
+                        <div class="grid-card grid-card__background--models box-shadow">
+                            <h3>MODELS</h3>
+                        </div>
+                        <div class="grid-card grid-card__background--materials box-shadow">
+                            <h3>MATERIALS</h3>
+                        </div>
+                        <div class="grid-card grid-card__background--help box-shadow">
+                            <h3>HELP</h3>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -90,7 +109,8 @@
             <div class="column-2 column-2-mobile flex-order">
                 <h2 class="text-shadow"><span>HOW</span> we help people</h2>
             </div>
-            <div class="column-2 column-2-mobile flex flex-center box-shadow rounded testimonial-card flex-row flex-column--mobile">
+            <div
+                class="column-2 column-2-mobile flex flex-center box-shadow rounded testimonial-card flex-row flex-column--mobile">
                 <img src="assets/img/testimonial-slider-asian-dude.webp" alt="this should be a persons image">
                 <div>
                     <p class="testimonial-text">"Jeez. This got me up and running for a job interview!"</p>
@@ -107,7 +127,8 @@
         <div class="container container-mobile flex-column-mobile flex">
             <div class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order">
                 <h2><span>GOT</span> questions?</h2>
-                <p class="column-2__text">Feel free to contact us at any time! We will come back to you as soon as possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
+                <p class="column-2__text">Feel free to contact us at any time! We will come back to you as soon as
+                    possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
             </div>
             <div class="column-2 column-2-mobile flex flex-end flex-center--mobile">
                 <div class="form-wrapper flex flex-column box-shadow">
@@ -124,7 +145,9 @@
                         <label class="newsletter" for="newsletter">I also want the newsletter!</label>
                     </div>
                     <div class="button-wrapper">
-                        <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/response.html" aria-label="this links to the basics page" rel="noopener" target="_blank">
+                        <a class="button text-white"
+                            href="https://rebellionwebdesign.github.io/fab-forever/response.html"
+                            aria-label="this links to the basics page" rel="noopener" target="_blank">
                             SEND FORM
                         </a>
                     </div>
