--- a/materials.html
+++ b/materials.html
@@ -59,7 +59,7 @@
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-measure.webp">
                 <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-measure.webp">
                 <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-measure.webp">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-measure.webp" alt="this should be a printhead">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-measure.webp" alt="this should be a filament image">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>WHAT </span>are 3D printing materials?</h2>
@@ -73,7 +73,7 @@
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-roll-mobile.webp">
                 <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-roll-mobile.webp">
                 <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-roll-mobile.webp">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-roll.webp" alt="this should be a printhead">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-roll.webp" alt="this should be a filament roll">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>ARE</span> they safe?</h2>
