Update images to png for safety

--- a/basics.html
+++ b/basics.html
@@ -56,10 +56,10 @@
     <div class="container container--mobile flex flex-column--mobile">
         <main>
             <picture>
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-printhead.webp" alt="this should be a printhead">
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-printhead-mobile.png">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-printhead-mobile.png">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-printhead-mobile.png">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-printhead.png" alt="this should be a printhead">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>WHAT </span>is 3D Printing?</h2>
@@ -71,10 +71,10 @@
                 </p>
             </article>
             <picture>
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-orange-print.webp" alt="this should be a printhead">
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-orange-print-mobile.png">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-orange-print-mobile.png">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-orange-print-mobile.png">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-orange-print.png" alt="this should be a printhead">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>HOW</span> can I use a 3D Printer?</h2>
