Update images to png for safety

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
             <div
                 class="column-2 column-2-mobile flex flex-center box-shadow rounded testimonial-card flex-row flex-column--mobile">
-                <img src="assets/img/testimonial-slider-asian-dude.webp" alt="this should be a persons image">
+                <img src="assets/img/testimonial-slider-asian-dude.png" alt="this should be a persons image">
                 <div>
                     <p class="testimonial-text">"Jeez. This got me up and running for a job interview!"</p>
                     <p><em>Kaneda Yamagata - CTO MeshBash</em></p>
