--- a/materials.html
+++ b/materials.html
@@ -56,10 +56,10 @@
     <div class="container container--mobile flex flex-column--mobile">
         <main>
             <picture>
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-measure-mobile.webp">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-measure-mobile.webp">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-measure-mobile.webp">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-measure.webp" alt="this should be a filament image">
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-measure.png" alt="this should be a filament image">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>WHAT </span>are 3D printing materials?</h2>
@@ -70,10 +70,10 @@
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </article>
             <picture>
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-roll-mobile.webp">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-roll-mobile.webp">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-roll-mobile.webp">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-roll.webp" alt="this should be a filament roll">
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-filament-roll.png" alt="this should be a filament roll">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>ARE</span> they safe?</h2>
