--- a/models.html
+++ b/models.html
@@ -56,10 +56,10 @@
     <div class="container container--mobile flex flex-column--mobile">
         <main>
             <picture>
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-printhead-mobile.png">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-printhead-mobile.png">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-printhead-mobile.png">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-printhead.png" alt="this should be a printd 3d model">
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-octocat-mobile.png">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-octocat-mobile.png">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-octocat-mobile.png">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-octocat.png" alt="this should be a printd 3d model">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>WHAT </span>are 3D Printing models?</h2>
@@ -70,10 +70,10 @@
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </article>
             <picture>
-                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-orange-print-mobile.png">
-                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-orange-print-mobile.png">
-                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-orange-print-mobile.png">
-                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-orange-print.png" alt="this should be a 3d model">
+                <source media="(max-width: 375px)" srcset="assets/img/fab-forever-3d-desk-mobile.png">
+                <source media="(max-width: 576px)" srcset="assets/img/fab-forever-3d-desk-mobile.png">
+                <source media="(max-width: 768px)" srcset="assets/img/fab-forever-3d-desk-mobile.png">
+                <img class="printhead rounded margin-top--l" src="assets/img/fab-forever-3d-desk.png" alt="this should be a table">
             </picture>
             <article class="margin-top--l margin-bottom--l">
                 <h2 class="margin-bottom--s"><span>WHERE</span> can I get them? - I am no designer</h2>
