Fix comments in S media queries

--- a/models.html
+++ b/models.html
@@ -53,7 +53,7 @@
 
     <!--CONTENT SECTION START-->
     <section class="section-full flex flex-center section-padding--bottom">
-    <div class="container container--mobile flex flex-column--mobile">
+    <div class="container container--mobile">
         <main>
             <picture>
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-octocat-mobile.png">
