--- a/basics.html
+++ b/basics.html
@@ -83,6 +83,8 @@
                 </p>
                     <picture>
                         <source media="(max-width: 375px)" srcset="assets/img/fab-forever-3d-print-process-mobile.png">
+                        <source media="(max-width: 576px)" srcset="assets/img/fab-forever-3d-print-process-mobile.png">
+                        <source media="(max-width: 768px)" srcset="assets/img/fab-forever-3d-print-process-mobile.png">
                         <img src="assets/img/fab-forever-3d-print-process.png" alt="this should be a flow diagram">
                     </picture>
             </article>
