Update image classes to be centerd

--- a/basics.html
+++ b/basics.html
@@ -55,7 +55,7 @@
     <section class="section-full flex flex-center section-padding--bottom">
     <div class="container container--mobile">
         <main>
-            <picture>
+            <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-printhead-mobile.png">
                 <source media="(max-width: 576px)" srcset="assets/img/fab-forever-printhead-mobile.png">
                 <source media="(max-width: 768px)" srcset="assets/img/fab-forever-printhead-mobile.png">
@@ -70,7 +70,7 @@
                 <p>There are plenty of different types of 3D Printers on the market. They can be organized into three categories: plug and play Printers, DIY Kits and RepRap (self built) Printers. The machines used here can also be sorted in different categories: cartesic Printers and delta Printers. While They do the same, the inner workings on the used coordinate system are different. Cartesic Printers use a rectangular printing bed with cartesic coordinates, while delta Printers usually have a circular bed and with polar coordinates.
                 </p>
             </article>
-            <picture>
+            <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-orange-print-mobile.png">
                 <source media="(max-width: 576px)" srcset="assets/img/fab-forever-orange-print-mobile.png">
                 <source media="(max-width: 768px)" srcset="assets/img/fab-forever-orange-print-mobile.png">
@@ -81,7 +81,7 @@
                 <p>
                     Using a 3d printer is only part of the complete process. To give you an overview we compiled together a nice flow diagram for you:
                 </p>
-                    <picture>
+                    <picture class="flex flex-center margin-top--l">
                         <source media="(max-width: 375px)" srcset="assets/img/fab-forever-3d-print-process-mobile.png">
                         <source media="(max-width: 576px)" srcset="assets/img/fab-forever-3d-print-process-mobile.png">
                         <source media="(max-width: 768px)" srcset="assets/img/fab-forever-3d-print-process-mobile.png">
