Update heading to be centerd

--- a/basics.html
+++ b/basics.html
@@ -45,7 +45,7 @@
     <!--HEADER SECTION START-->
     <section class="section-half flex flex-center flex-column flex-between background">
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container container-mobile text-white text-shadow">
+        <div class="container container-mobile flex flex-center text-white text-shadow">
             <h1><span>BASICS</span> of 3D Printing</h1>
         </div>
         <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
