--- a/materials.html
+++ b/materials.html
@@ -55,7 +55,7 @@
     <section class="section-full flex flex-center section-padding--bottom">
     <div class="container container--mobile flex flex-column--mobile">
         <main>
-            <picture>
+            <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
                 <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
                 <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-measure-mobile.png">
@@ -69,7 +69,7 @@
                 <h2 class="margin-bottom--s"><span>WHICH </span>materials are there?</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </article>
-            <picture>
+            <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
                 <source media="(max-width: 576px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
                 <source media="(max-width: 768px)" srcset="assets/img/fab-forever-filament-roll-mobile.png">
