--- a/models.html
+++ b/models.html
@@ -45,7 +45,7 @@
     <!--HEADER SECTION START-->
     <section class="section-half flex flex-center flex-column flex-between background">
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container container-mobile text-white text-shadow">
+        <div class="container container-mobile text-white text-shadow flex flex-center">
             <h1><span>MODELS</span> for 3D Printing</h1>
         </div>
         <img class="flip-x divider-bottom" src="assets/img/shape-divider-bottom.svg" alt="the top shape divider">
