Update image classes to be centerd

--- a/models.html
+++ b/models.html
@@ -55,7 +55,7 @@
     <section class="section-full flex flex-center section-padding--bottom">
     <div class="container container--mobile">
         <main>
-            <picture>
+            <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-octocat-mobile.png">
                 <source media="(max-width: 576px)" srcset="assets/img/fab-forever-octocat-mobile.png">
                 <source media="(max-width: 768px)" srcset="assets/img/fab-forever-octocat-mobile.png">
@@ -69,7 +69,7 @@
                 <h2 class="margin-bottom--s"><span>HOW </span>can I make them?</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </article>
-            <picture>
+            <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-3d-desk-mobile.png">
                 <source media="(max-width: 576px)" srcset="assets/img/fab-forever-3d-desk-mobile.png">
                 <source media="(max-width: 768px)" srcset="assets/img/fab-forever-3d-desk-mobile.png">
