--- a/help.html
+++ b/help.html
@@ -55,7 +55,7 @@
     <section class="section-full flex flex-center section-padding--bottom">
     <div class="container container--mobile flex flex-column--mobile">
         <main>
-            <picture>
+            <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
                 <source media="(max-width: 576px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
                 <source media="(max-width: 768px)" srcset="assets/img/fab-forever-printhead-mobile.webp">
