Update image to be centered

--- a/help.html
+++ b/help.html
@@ -69,7 +69,7 @@
                 <h2 class="margin-bottom--s"><span>BED </span>is not level</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </article>
-            <picture>
+            <picture class="flex flex-center">
                 <source media="(max-width: 375px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
                 <source media="(max-width: 576px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
                 <source media="(max-width: 768px)" srcset="assets/img/fab-forever-orange-print-mobile.webp">
